--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,8 @@
       {{{body}}}
 
       <script src="/js/script.js"></script>
+      <script src="/routes/index.routes.js"></script>
+      <script src="routes/index.routes.js"></script>
    </body>
 
 </html>
