--- a/views/products/details.hbs
+++ b/views/products/details.hbs
@@ -18,7 +18,7 @@
 <button type="submit">Add to cart</button>
 </form> --}}
 
-<form action="/cart" method="post">
+<form action="/cart/:id" method="post">
   <input type="hidden" name="id" value="{{ product.id }}">
   <input type="number" name="quantity" value="quantity" min="1">
   <button type="submit">Add to Cart</button>
