--- a/views/users/dashboard.hbs
+++ b/views/users/dashboard.hbs
@@ -10,6 +10,10 @@
   <button>
     <a href="/dashboard/{{userInSession.username}}">Reload the page</a>
   </button>
+  <form id="logout-form" action="/logout" method="POST">
+    <button>Logout</button>
+  </form>
+
 {{else}}
   
   <br><p>Still no logged in user, sorry!</p>
